# ufl_scene_text_recognition

./: .gitignore  CMakeLists.txt  README.md  beam_search.cpp  ufl_predict_char.cpp  ufl_predict_word.cpp  ufl_predict_word_integrated.cpp  utils.h
train/: CMakeLists.txt  README.md  RESULTS.liblinear  all_train_data.liblinear.model_s2  all_train_data.liblinear.model_s7  binary_train_data.liblinear.model_s7  extract_features.cpp  extract_filters.cpp  first_layer_centroids.xml  utils.h
train/confusion_matrix/: confusion_matrix.py  out  test_labels
train/data/: all_train_data.svm.range  binary_train_data.svm.range
train/data/sample/: img_1.pgm
